<resources>
    <string name="app_name">Wurm Paint</string>
    <string name="feedback_text" translatable="false">
        I would love to hear your feedback on the app, please rate us so that we can do better!
    </string>
    <string name="start_text">Start</string>
    <string name="register_text">Register</string>
    <string name="sign_in_text">Sign In</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="or_text">OR</string>
    <string name="no_account_text">No account? Register now!</string>
    <string name="color_text">Color</string>
    <string name="clear_text">Clear</string>
    <string name="placeholder_email">user@wurmpaint.co</string>
    <string name="next_random_text">Next Random</string>
    <string name="mark_as_bad">Report</string>
    <string name="reason_marking_image">Any reasons for marking this image?</string>
    <string name="img_name_placeholder" translatable="false">###/###.png</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="default_email_name">wurm.painter@gmail.com</string>
    <string name="default_notification_channel_id" translatable="false">my_channel_01</string>
    <string name="reset_psw_text">Reset Password</string>
    <string name="reenter_email_text">Re-enter your email</string>
    <string name="reset_text">Reset</string>
    <string name="app_id" translatable="false">52423362671</string>
    <string name="achievement_newbie_1_id" translatable="false">CgkI75C0pcMBEAIQAQ</string>
    <string name="achievement_newbie_2_id" translatable="false">CgkI75C0pcMBEAIQBA</string>
    <string name="achievement_colorful_id" translatable="false">CgkI75C0pcMBEAIQDw</string>
    <string name="achievement_growing_1_id" translatable="false">CgkI75C0pcMBEAIQBQ</string>
    <string name="achievement_growing_2_id" translatable="false">CgkI75C0pcMBEAIQBg</string>
    <string name="achievement_silver_id" translatable="false">CgkI75C0pcMBEAIQBw</string>
    <string name="achievement_gold_id" translatable="false">CgkI75C0pcMBEAIQCA</string>
    <string name="achievement_diamond_id" translatable="false">CgkI75C0pcMBEAIQCQ</string>
    <string name="achievement_platinum_id" translatable="false">CgkI75C0pcMBEAIQCg</string>
    <string name="achievement_master_of_all_id" translatable="false">CgkI75C0pcMBEAIQCw</string>
    <string name="achievement_reporter_1_id" translatable="false">CgkI75C0pcMBEAIQAg</string>
    <string name="achievement_reporter_2_id" translatable="false">CgkI75C0pcMBEAIQDA</string>
    <string name="achievement_exp_reporter_id" translatable="false">CgkI75C0pcMBEAIQDQ</string>
    <string name="achievement_pro_reporter_id" translatable="false">CgkI75C0pcMBEAIQDg</string>
    <string name="leaderboard_wurm_scores_id" translatable="false">CgkI75C0pcMBEAIQAw</string>
    <string name="default_user_name">Wurm Painter</string>
    <string name="title_activity_settings">Wurm Settings</string>
    <string name="pref_change_language_title">Change Language</string>
    <string name="pref_color_wheel_title">Color Wheel Type</string>
    <string-array name="pref_color_wheel_list_titles">
        <item>Flower</item>
        <item>Circle</item>
    </string-array>
    <string-array name="pref_color_wheel_list_indices">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="cat_menu_player">Player</string>
    <string name="menu_achievements">Achievements</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_wurm_meter">Wurm-o-Meter</string>
    <string name="menu_wurm_history">Wurm Logbook</string>
    <string name="menu_gplay_settings">Google Play Settings</string>
    <string name="menu_log_out">Log Out</string>
    <string name="cat_menu_manage">Manage</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_send_feedback">Send Feedback</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="change_log_text" translatable="false">
        <![CDATA[
            <h1>Changelog</h1>
                <h3>2.07 (2019-11-09)</h3>
                    <span>
                        - General bug fixes and stability improvements
                    </span>
                <h3>2.06 (2018-09-10)</h3>
                    <span>
                        - Added ability to switch between loading images randomly or in order
                    </span>
                <h3>2.05 (2018-05-16)</h3>
                    <span>
                        - Google users can now see their profile picture in the navigation bar
                        - Minor design layout color changes
                    </span>
                <h3>2.04 (2018-05-09)</h3>
                    <span>
                        - Loads user profile picture from Google
                        - Updated feedback mechanism
                        - Warns user when there is no internet connection
                    </span>
                <h3>2.03 (2018-05-09)</h3>
                    <span>
                        - Added Help screen <br />
                        - Added Wurm Logbook to display drawing history <br />
                        - Updated app icon <br />
                        - Updated notification icon <br />
                        - Updated Navigation Drawer profile icon <br />
                        - Fixed an issue on some phones where pressing the Settings back button does not correctly go back to the drawing screen<br />
                        - Disabled controls when sending images <br />
                    </span>
                <h3>1.09 (2018-4-28)</h3>
                    <span>
                        - Updated Achievements scoring <br />
                        - Updated LeaderBoard submissions <br />
                        - User can now draw in different colors <br />
                        - Added color wheel type in settings <br />
                        - Added Wurm-o-Meter screen with user scores <br />
                        - Added Colorful Wurms achievement that unlocks color annotation <br />
                    </span>
                <h3>1.08 (2018-04-24)</h3>
                    <span>
                        - Added about screen <br />
                        - Redesigned navigation drawer layout <br />
                        - Added user preferences <br />
                        - Update navigation drawer based on whether user is signed in via Google or otherwise <br />
                        - App automatically signs out if Google Account is signed out. <br />
                        - Added more Google Play Achievements <br />
                    </span>
                <h3>1.07 (2018-04-14)</h3>
                    <span>
                        - Added user scores in FireBase <br />
                        - More robust image loading from FireBase <br />
                        - Navigation menu support <br />
                        - Added Google Play Achievements <br />
                        - Added Google Play Leaderboard <br />
                        - Added line information (pixel accuracy) on FireBase database <br />
                        - Updated Play Services to v15.0.0 <br />
                    </span>
                <h3>1.06 (2018-03-09)</h3>
                    <span>
                        - Checks whether anything has been drawn before the user submits <br />
                        - Disabled anti-aliasing <br />
                        - Notify user that they have already drawn if they try to draw again <br />
                        - Brings down keyboard after user attempts to login <br />
                        - Added user verification <br />
                        - Added user password reset <br />
                    </span>
                <h3>1.05 (2018-02-22)</h3>
                    <span>
                        - More robust email validation <br />
                        - Improved password fields <br />
                        - Added basic navigation drawer to access user profile <br />
                        - Google Sign-in now fully supported <br />
                        - Added push notification support <br />
                        - FireBase analytics <br />
                    </span>
                <h3>1.04 (2018-01-24)</h3>
                    <span>
                        - Added quick options to marking bad images rather than just a general comment box <br />
                        - Resolved an issue where an empty email or password login would lead to a crash <br />
                    </span>
                <h3>1.03 (2017-12-16)</h3>
                    <span>
                        - Increased image retrieval size <br />
                        - Clean up and code optimization <br />
                        - App takes up to 70% less space on devices <br />
                    </span>
                <h3>1.02 (2017-12-08)</h3>
                    <span>
                        - Added FireBase Crashlytics and Performance Monitoring <br />
                        - Added feedback and rate app dialog <br />
                        - Removed brush color functionality <br />
                        - Images expanded to fill the screen <br />
                        - User restricted to drawing single strokes <br />
                        - User can mark images as bad and provide a reason <br />
                        - Optimized for tablet displays <br />
                    </span>
                <h3>1.01 (2017-12-01)</h3>
                    <span>
                        - Lowered app requirements to be able to install on older Android devices (up to Lollipop) <br />
                    </span>
                <h3>1.0 (2017-11-19)</h3>
                    <span>
                        - Initial Release <br />
                    </span>
        ]]>
    </string>
    <string name="title_activity_about">About Wurm Paint</string>
    <string name="about_app_text" translatable="false">
        <![CDATA[
            <h1>About</h1>
                <p>Android drawing application for annotating the backbone of worms.</p>
                <a href="https://github.com/jiangshen/WurmPaint">Project Source Code Repository</a>
        ]]>
    </string>
    <string name="privacy_policy_text" translatable="false">
        <![CDATA[
            <h1>Privacy Policy</h1>
            <a href="https://sites.google.com/view/wurm/app-privacy-policy">Link to App Privacy Policy</a>
        ]]>
    </string>
    <string name="text_tip">
        Switch to a <b>Google</b> account for more achievement and compete with your friends on the leaderboard!
    </string>
    <string name="content_desc_iv_tip" translatable="false">Light bulb graphic</string>
    <string name="content_desc_usr_profile_img" translatable="false">User profile image</string>
    <string name="content_desc_quote_image" translatable="false">Quote image</string>
    <string name="text_wurms_annotated">Wurms Annotated</string>
    <string name="text_hours_saved">Hours Saved</string>
</resources>