<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_header_layout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/color_nav_background"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <android.support.v7.widget.CardView
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:cardCornerRadius="32dp"
        app:cardElevation="4dp">
        <ImageView
            android:id="@+id/nav_imgview"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@mipmap/ic_default_profile"
            android:background="#000000"
            android:contentDescription="@string/content_desc_usr_profile_img" />
    </android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/nav_drawer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/default_user_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    <TextView
        android:id="@+id/nav_drawer_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_email_name" />
</LinearLayout>
